--- a/HRStore/views/sign_up.xml
+++ b/HRStore/views/sign_up.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-<!--页面  田紫微 计科162  161002420 实现 梁晓珂 计科162 161002221-->
+    <!--页面  田紫微 计科162  161002420 实现 梁晓珂 计科162 161002221-->
     <template id="sign_up" name="Sign up">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
@@ -24,9 +24,17 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                   <ul class="navbar-nav ml-auto main-nav ">
+                                    <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home">首页</a>
+                                            <form action="/home" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link"
+                                                        type="submit">首页
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
                                             <form action="/products" method="post">
@@ -36,18 +44,22 @@
                                                        t-att-value="user_id"/>
                                                 <input type="hidden" name="type"
                                                        t-att-value="2"/>
-                                                <button class="btn btn-link nav-link" style="color:black;" type="submit">培训产品</button>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">培训产品
+                                                </button>
                                             </form>
                                         </li>
                                         <li class="nav-item">
-                                             <form action="/products" method="post">
+                                            <form action="/products" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <input type="hidden" name="type"
                                                        t-att-value="1"/>
-                                                <button class="btn btn-link nav-link" style="color:black;" type="submit">活动策划</button>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">活动策划
+                                                </button>
                                             </form>
                                         </li>
                                         <li class="nav-item">
@@ -58,7 +70,9 @@
                                                        t-att-value="user_id"/>
                                                 <input type="hidden" name="type"
                                                        t-att-value="3"/>
-                                                <button class="btn btn-link nav-link" style="color:black;" type="submit">精美商品</button>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">精美商品
+                                                </button>
                                             </form>
                                         </li>
                                         <li class="nav-item">
@@ -69,11 +83,32 @@
                                                        t-att-value="user_id"/>
                                                 <input type="hidden" name="type"
                                                        t-att-value="4"/>
-                                                <button class="btn btn-link nav-link" style="color:black;" type="submit">法律服务</button>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">法律服务
+                                                </button>
                                             </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/customer_service">在线客服</a>
+                                            <form action="/forum" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">论坛
+                                                </button>
+                                            </form>
+                                        </li>
+                                        <li class="nav-item">
+                                            <form action="/customer_service" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">在线客服
+                                                </button>
+                                            </form>
                                         </li>
                                     </ul>
 
